[metadata]
name = rdsp-client-ck
version = 0.0.3
author = hjiang
author_email = redmagic039@gmail.com
description = a python package used to fast read and write clickhouse data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hjiang-sse/fasth5
project_urls =
    Bug Tracker = https://github.com/hjiang-sse/fasth5/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    pandas
    clickhouse_driver
    grpcio
    protobuf
    tzlocal == 2.1

[options.packages.find]
where = src
